2000-03-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* _scm.h:  Don't include ports.h everywhere...

	* arbiters.c backtrace.c debug.c dynl.c dynwind.c eval.c feature.c
	fluids.c gc.c gdbint.c guardians.c hash.c keywords.c mallocs.c
	numbers.c objects.c print.c read.c root.c smob.c srcprop.c
	stackchk.c strports.c struct.c throw.c variable.c:  ... only
	include it here.

2000-03-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* _scm.h:  Don't include vectors.h everywhere...

	* eq.c eval.c filesys.c gc.c gsubr.c guardians.c hash.c hashtab.c
	keywords.c net_db.c numbers.c objects.c posix.c print.c procprop.c
	procs.c ramap.c random.c read.c scmsigs.c socket.c sort.c stime.c
	strports.c symbols.c unif.c vports.c weaks.c:  ... only include it
	here.

2000-03-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* genio.h:  removed.  (Only content was '/* delete me */'.)

	* Makefile.am arbiters.c backtrace.c debug.c dynl.c dynwind.c
	error.c filesys.c fluids.c gc.c gsubr.c guardians.c keywords.c
	libguile.h mallocs.c numbers.c print.c random.c read.c root.c
	srcprop.c stackchk.c struct.c threads.c throw.c variable.c:
	Removed reference to genio.h

2000-03-17  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* gc.c, gc.h: Cleanup of the change of 2000-03-15.
	Cluster sizes are now independent of GC trigger values.
	GUILE_GC_TRIGGER_n can now specify a relative trigger value:
	A negative integer gives fraction of total heap size in percent.
	(SCM_GC_TRIGGER_1, SCM_GC_TRIGGER_2): Default values set to -40.

	* init.c (scm_boot_guile_1): Introduced new variable
	GUILE_MAX_SEGMENT_SIZE; New environment variable names:
	GUILE_INIT_SEGMENT_SIZE_1, GUILE_GC_TRIGGER_1,
	GUILE_INIT_SEGMENT_SIZE_2, GUILE_GC_TRIGGER_2

2000-03-16  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
	
	* __scm.h (GC_FREE_SEGMENTS): Disable this until we have made
	freeing of segment work with the new GC scheme.  (Thanks to
	Michael Livshin.)  Oops, also happened to make GUILE_NEW_GC_SCHEME