@@ -59,6 +59,7 @@
 #include "eval.h"
 #include "alist.h"
 #include "ports.h"
+#include "strings.h"
 #include "vectors.h"
 
 #include "validate.h"
